removed "." from background image path

--- a/css/body.css
+++ b/css/body.css
@@ -1,7 +1,7 @@
 .body {
     height: 100vh;
     width: 100%;
-    background-image: url("../img/money.jpg");
+    background-image: url("./img/money.jpg");
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
